# splore-sdk-py

./: .flake8  .gitignore  CHANGELOG.MD  CHANGELOG.md  README.md  publish.sh  pyproject.toml  pytest.ini  setup.py  storage_file  test_all_versions.sh  test_py37.sh  tox.ini
examples/: agent_managements.py  aws.py  extract_with_local_file.py  extractions.py  extractions_with_aws.py  file_upload_example.py  multple_extractions.py  test.py  test_tus.py  upload_files.py
examples/extractions/: quick_extraction.py
examples/markdown_converter/: markdown_example.py
examples/search/: search_example.py
splore_sdk/: __init__.py  sdk.py
splore_sdk/agents/: agents_service.py  validations.py
splore_sdk/core/: api_client.py  compat.py  constants.py  exceptions.py  logger.py  validators.py
splore_sdk/extractions/: extractions_service.py  validations.py
splore_sdk/search/: search_service.py  validations.py
splore_sdk/utils/: __init__.py  file_uploader.py  markdown_converter.py  misc.py
splore_sdk/utils/decorators/: __init__.py  poll_with_timeout.py  retry_with_backoff.py
tests/: test_agents.py  test_capabilities.py  test_extractions.py  test_file_uploader.py  test_markdown_converter.py  test_sdk.py  test_search.py
