[project]
name = "splore-sdk"
version = "0.1.17"
description = "splore sdk to interact with splore services"
authors = [
    { name = "DilipCoder", email = "dilips.ven@splore.com" }
]
homepage = "https://splore.com/"
repository = "https://github.com/splorehq/splore-sdk-py"
documentation = "https://docs.splore.com/"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "requests>=2.32.3",
    "pydantic>=2.9.2",
    "tuspy>=1.1.0"
]

[project.urls]
"Changelog" = "https://github.com/splorehq/splore-sdk-py/blob/main/CHANGELOG.md"
"Issues" = "https://github.com/splorehq/splore-sdk-py/issues"
"Releases" = "https://github.com/splorehq/splore-sdk-py/releases"

[project.optional-dependencies]
examples = ["boto3"]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "tox>=4.0.0",
    "flake8",
    "black>=23.3.0"
]

[tool.hatch.commands]
test = "pytest"

[tool.hatch.build]
include = ["splore_sdk", "README.md", "CHANGELOG.md"]
exclude = ["tests", "examples"]

[tool.black]
line-length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
