[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splore-sdk"
version = "0.1.20"
description = "Python SDK for Splore"
authors = [
    { name="DilipCoder", email="dilips.ven@splore.com" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=1.10.8,<2.0.0",
    "markdown>=3.4.1"
]

[project.urls]
"Homepage" = "https://github.com/splorehq/splore-sdk-py"
"Documentation" = "https://github.com/splorehq/splore-sdk-py"
"Changelog" = "https://github.com/splorehq/splore-sdk-py/blob/main/CHANGELOG.md"
"Issues" = "https://github.com/splorehq/splore-sdk-py/issues"
"Releases" = "https://github.com/splorehq/splore-sdk-py/releases"

[project.optional-dependencies]
examples = [
    "boto3>=1.37.30",
    "python-dotenv>=1.0.0"
]

[tool.black]
line-length = 88

[tool.pdm]
python = ">=3.7"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-mock>=3.0.0",
    "flake8>=5.0.0"
]

[tool.pdm.scripts]
test = "pytest tests/"
test-all = "./test_all_versions.sh"
